--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ agno==0.1.0
 google-generativeai==0.3.2
 requests==2.31.0
 duckduckgo-search==8.1.1
+
+# Security dependencies
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+slowapi==0.1.9
