--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-python-dotenv==1.0.0
-pydantic==2.5.0
-agno==0.1.0
-google-generativeai==0.3.2
-requests==2.31.0
-duckduckgo-search==8.1.1
+fastapi
+uvicorn
+python-multipart
+python-dotenv
+pydantic
+agno
+google-generativeai
+requests
+duckduckgo-search
 
-# Security dependencies
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-slowapi==0.1.9
+
